@@ -32,7 +32,7 @@ class BitbucketOAuthAdapter(OAuthAdapter):
     access_token_url = 'https://bitbucket.org/api/1.0/oauth/access_token'
     authorize_url = 'https://bitbucket.org/api/1.0/oauth/authenticate'
 
-    def complete_login(self, request, app, token):
+    def complete_login(self, request, app, token, response):
         client = BitbucketAPI(request, app.client_id, app.secret,
                               self.request_token_url)
         extra_data = client.get_user_info()
