@@ -22,7 +22,7 @@ class XingOAuthAdapter(OAuthAdapter):
     access_token_url = 'https://api.xing.com/v1/access_token'
     authorize_url = 'https://www.xing.com/v1/authorize'
 
-    def complete_login(self, request, app, token):
+    def complete_login(self, request, app, token, response):
         client = XingAPI(request, app.client_id, app.secret,
                          self.request_token_url)
         extra_data = client.get_user_info()['users'][0]
