@@ -47,6 +47,7 @@ settings.py::
         'allauth.socialaccount.providers.coinbase',
         'allauth.socialaccount.providers.dropbox',
         'allauth.socialaccount.providers.dropbox_oauth2',
+        'allauth.socialaccount.providers.evernote',
         'allauth.socialaccount.providers.facebook',
         'allauth.socialaccount.providers.flickr',
         'allauth.socialaccount.providers.feedly',
