@@ -1,5 +1,7 @@
 2015-02-27  Raymond Penners  <raymond.penners@intenct.nl>
 
+	* Patrick Paul contribued a provider for Evernote, thanks!
+
 	* Josh Wright contribued a provider for Spotify, thanks!
 
 2015-02-12  Raymond Penners  <raymond.penners@intenct.nl>
